<resources>
    <string name="app_name">Alura Sports</string>
    <string name="comprar">Buy</string>
    <string name="data_de_validade">Validity date</string>
    <string name="card_number">Card number</string>
    <string name="cvc_number" translatable="false">CVC</string>
    <string name="confirm_payment">Confirm payment</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="log_out">Log out</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="log_in_text">Log in</string>
    <string name="password_confirmation">Confirm password</string>
    <string name="name">Name</string>
    <string name="products_text">Products</string>
    <string name="payments_text">Payments</string>
    <string name="email_text">E-mail</string>
    <string name="my_account_text">My account</string>
    <string name="save_text">Save</string>
    <string name="price">Price</string>
    <string name="enter_text">Enter</string>
    <string name="alurasports_intro_text">Boost your favorite sport with our products!</string>
    <string name="edit_text">Edit</string>
    <string name="delete">Delete</string>
</resources>
